Fix: align deployed asset paths and repair SCSS syntax

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -18,17 +18,6 @@
     flex-wrap: nowrap;
     gap: 2em;
   }
-  margin-left: auto;
-  margin-right: auto;
-
-  @include breakpoint($large) {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 2em;
-  }
-flex: 1;
-    min-width: 0
-  }
 }
 
 .page {
